# cpp-rotor

./: .clang-format  .cmake-format.py  .cmakelintrc  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  todo.txt
.circleci/: config.yml
.sourcecraft/: ci.yaml
cmake/: rotor-config.cmake.in
docs/: Changelog.md  Compilation.md  Contents.dox  Dependencies.md  Design.md  Doxyfile.in  Examples.md  Introduction.md  License.md  Loops.md  Manual.md  Patterns.md  Rationale.md  References.md  actor-lifecycle.drawio  actor-states.xmi  extra.css  header.html  lifecycle-full.drawio  lifecycle-simplified.drawio  supervising.dot
examples/: CMakeLists.txt  autoshutdown.cpp  dummy_supervisor.h  escalate-failure.cpp  hello_loopless.cpp  ping-pong-ev_and_asio.cpp  ping-pong-fltk.cpp  ping-pong-fltk_and_thread.cpp  ping_pong-lambda.cpp  ping_pong.cpp  pub_sub.cpp
examples/boost-asio/: CMakeLists.txt  beast-scrapper.cpp  hello_asio.cpp  one-shot-lambda-subscriber.cpp  ping-pong-2-theads.cpp  ping-pong-2-threads-preemt.cpp  ping-pong-2-threads.cpp  ping-pong-single-simple.cpp  ping-pong-timer.cpp  ping_pong-2-theads.cpp  ping_pong-single-simple.cpp  request-responce.cpp  request-response-discovery.cpp  request-response.cpp
examples/ev/: CMakeLists.txt  ping-pong-comp.cpp  ping-pong-ev-2-threads.cpp  ping-pong-ev.cpp  ping-pong-req.cpp  pong-registry.cpp
examples/thread/: CMakeLists.txt  ping-pong-no-alloc.cpp  ping-pong-spawner.cpp  ping-pong-thread.cpp  sha512.cpp
include/: rotor.hpp
include/rotor/: actor.hpp  actor_base.h  actor_config.h  address.hpp  address_mapping.h  arc.hpp  asio.hpp  behavior.h  error_code.h  ev.hpp  extended_error.h  fltk.hpp  forward.hpp  forwarder.hpp  handler.h  handler.hpp  message.h  message.hpp  message_stringifier.h  messages.hpp  plugin.h  plugins.h  policy.h  registry.h  request.h  request.hpp  spawner.h  state.h  subscription.h  subscription.hpp  subscription_point.h  supervisor.h  supervisor.hpp  supervisor_config.h  system_context.h  system_context.hpp  thread.hpp  timer_handler.hpp  wx.hpp
include/rotor/asio/: forwarder.hpp  supervisor_asio.h  supervisor_config.h  supervisor_config_asio.h  system_context_asio.h  system_context_base.h
include/rotor/detail/: child_info.h
include/rotor/ev/: supervisor_config.h  supervisor_config_ev.h  supervisor_ev.h  system_context_ev.h
include/rotor/fltk/: supervisor_config_fltk.h  supervisor_fltk.h  system_context_fltk.h
include/rotor/misc/: default_stringifier.h
include/rotor/plugin/: actor_lifetime.h  address_maker.h  child_manager.h  children_manager.h  delivery.h  foreigners_support.h  init_shutdown.h  initializer.h  lifetime.h  link_client.h  link_server.h  locality.h  plugin.h  plugin_base.h  prestarter.h  registry.h  resources.h  starter.h  subscriber.h  subscriber.hpp  subscription.h  subscription_support.h
include/rotor/thread/: supervisor_thread.h  system_context_thread.h
include/rotor/wx/: supervisor_config.h  supervisor_config_wx.h  supervisor_wx.h  system_context_wx.h
src/: forwarder_sample.cpp  main.cpp  ping_pong_asio.cpp  rotor-ping_pong.cpp
src/rotor/: actor_base.cpp  address_mapping.cpp  behavior.cpp  behaviour.cpp  error_code.cpp  extended_error.cpp  handler.cpp  message.cpp  message_stringifier.cpp  messages.cpp  plugin.cpp  registry.cpp  request.cpp  spawner.cpp  subscription.cpp  subscription_point.cpp  supervisor.cpp  system_context.cpp
src/rotor/asio/: supervisor_asio.cpp
src/rotor/detail/: child_info.cpp
src/rotor/ev/: supervisor_ev.cpp  system_context_ev.cpp
src/rotor/fltk/: supervisor_fltk.cpp  system_context_fltk.cpp
src/rotor/misc/: default_stringifier.cpp
src/rotor/plugin/: actor_lifetime.cpp  address_maker.cpp  child_manager.cpp  children_manager.cpp  delivery.cpp  foreigners_support.cpp  init_shutdown.cpp  initializer.cpp  lifetime.cpp  link_client.cpp  link_server.cpp  locality.cpp  plugin.cpp  plugin_base.cpp  prestarter.cpp  registry.cpp  resources.cpp  starter.cpp  subscriber.cpp  subscription.cpp  subscription_support.cpp
src/rotor/thread/: supervisor_thread.cpp  system_context_thread.cpp
src/rotor/wx/: supervisor_wx.cpp  system_context_wx.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: 007-plugins.cpp  008-config-builder.cpp  009-system-context.cpp  010-sup-start_stop.cpp  011-ping_pong.cpp  012-actor-lifetime.cpp  013-observer.cpp  014-lifetime-observer.cpp  015-actor-statuses.cpp  015-resources.cpp  016-pub_sub.cpp  017-req-res.cpp  018-lambda-handlers.cpp  019-link-unlink.cpp  020-two-supervisors.cpp  021-ping_pong-external.cpp  022-supervisor-tree.cpp  023-supervisor-children.cpp  024-supervisor-spawner.cpp  030-registry.cpp  031-next-address.cpp  098-message-stringifier.cpp  099-misc.cpp  101-asio_ping-pong-1-strand.cpp  102-asio_ping-pong-2-strands.cpp  103-asio_ping-pong-2-threads.cpp  104-asio_timer.cpp  121-wx_ping_ping.cpp  122-wx_timer.cpp  131-ev_ping-pong.cpp  132-ev_timer.cpp  141-thread_ping-pong.cpp  142-thread_timer.cpp  143-thread-shutdown_flag.cpp  151-fltk-ping-pong.cpp  CMakeLists.txt  access.cpp  access.h  actor_test.cpp  actor_test.h  (+6 more)
